Add event listener

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <script>
         document.getElementById("register-form").addEventListener("submit", function(event) {
             event.preventDefault();
-            alert("Domain registration successful!");
+            alert("Domain is available!");
         });
     </script>
 </body>
